--- a/src/Busybee/SystemBundle/Resources/views/Setting/create.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Setting/create.html.twig
@@ -10,7 +10,8 @@
 
 {% block contentContainer %}
 {{ form_start(form) }}
-    {% set h3Content = saveButton() %}
+    {% set h3Content = returnButton({'windowOpen': {'route': path('setting_manage')}}) %}
+    {% set h3Content = h3Content ~ saveButton() %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'system.setting.edit.title', 'transDomain': 'SystemBundle', 'panelParagraph': 'system.setting.edit.description'} %}
     {{ all_form_errors(fullForm, "div", "alert alert-danger fadeAlert", 'system.setting.edit.success'|trans, "alert alert-success fadeAlert") }}
 <div class="container-fluid">
