--- a/src/Busybee/SystemBundle/Resources/views/Setting/manage.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Setting/manage.html.twig
@@ -9,47 +9,47 @@
 
 {% block contentContainer %}
 	{% include 'PaginationBundle:Default:index.html.twig' %}
-	<div class="panel panel-primary busybee-panel">
-		<div class="panel-heading">
-			<h3 class="panel-title">{{ 'system.setting.manage.title'|trans}}</h3>
+    {% if is_granted('ROLE_SYSTEM_ADMIN') %}
+        {% set h3Content = miscButton({'windowOpen': {'route': path('setting_create')}, 'class': 'btn btn-success halflings halflings-asterisk' }) %}
+    {% endif %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'system.setting.manage.title', 'transDomain': 'SystemBundle'} %}
+    <div class="container-fluid">
+        <div class="row row-header">
+            <div class="col-sm-3 col-md-3" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Name' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'system.setting.manage.name'|trans }}
+                {% else %}
+                    {{ 'system.setting.manage.name'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-6 col-md-6" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Description' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'system.setting.manage.valueDesc'|trans }}
+                {% else %}
+                    {{ 'system.setting.manage.valueDesc'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-3 col-md-3 withAdd">
+                {{ 'system.setting.manage.actions'|trans }}
+            </div>
+        </div>
+        {% for setting in pagination.getResult %}
+            <div class="row row-striped">
+                <div class="col-sm-3 col-md-3 form-inline">
+                    {{ setting.displayName }}
+                </div>
+                <div class="col-sm-6 col-md-6 form-inline">
+                    {{ setting.description }}
+                </div>
+                <div class="col-sm-3 col-md-3 form-inline">
+                    <button title='{{ 'system.setting.edit.title'|trans }}' type="button"
+                            class="halflings halflings-edit btn btn-warning"
+                            onClick="window.open('{{ path('setting_edit', {'id': setting.id}) }}','_self')"></button>
+                </div>
+            </div>
+        {% endfor %}
 		</div>
-		<div class="panel-body">
-			<div class="container-fluid well">
-				<div class="row row-header">
-					<div class="col-sm-3 col-md-3" style="display: inline-block;">
-						{% if pagination.getSortByName == 'Name' %}
-							<span class="halflings halflings-sort-by-alphabet"></span> {{ 'system.setting.manage.name'|trans }}
-						{% else %}
-							{{ 'system.setting.manage.name'|trans }}
-						{% endif %}
-					</div>
-					<div class="col-sm-6 col-md-6" style="display: inline-block;">
-						{% if pagination.getSortByName == 'Description' %}
-							<span class="halflings halflings-sort-by-alphabet"></span> {{ 'system.setting.manage.valueDesc'|trans }}
-						{% else %}
-							{{ 'system.setting.manage.valueDesc'|trans }}
-						{% endif %}
-					</div>
-					<div class="col-sm-3 col-md-3 withAdd">
-						{{ 'system.setting.manage.actions'|trans }} 
-					</div>
-				</div>
-			{% for setting in pagination.getResult %}
-				<div class="row row-striped">
-					<div class="col-sm-3 col-md-3 form-inline">
-						{{ setting.displayName }}
-					</div>
-					<div class="col-sm-6 col-md-6 form-inline">
-						{{ setting.description }}
-					</div>
-					<div class="col-sm-3 col-md-3 form-inline">
-						<button title='{{ 'system.setting.edit.title'|trans}}' type="button" class="halflings halflings-edit btn btn-warning" onClick="window.open('{{ path('setting_edit', {'id': setting.id}) }}','_self')"></button>
-					</div>
-				</div>
-			{% endfor %}
-			</div>
-		</div>
-	</div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {% endblock contentContainer %}
 
 {% block javascripts %}
