--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/list.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/list.html.twig
@@ -48,6 +48,7 @@
                 </div>
                 <div class="col-sm-2 col-sm-offset-1 form-inline">
                     {{ editButton({'style': '', 'class': 'halflings halflings-edit btn btn-warning','title': 'timetable.edit.title', 'transDomain': 'BusybeeTimeTableBundle', 'windowOpen': {'route': path('timetable_edit', {'id': timetable.id, 'currentSearch': pagination.search|replace({'%': ''})})}})|raw }}
+                    {{ editButton({'style': '', 'class': 'halflings halflings-asterisk btn btn-warning','title': 'timetable.days.edit.button', 'transDomain': 'BusybeeTimeTableBundle', 'windowOpen': {'route': path('timetable_days_edit', {'id': timetable.id, 'currentSearch': pagination.search|replace({'%': ''})})}})|raw }}
                 </div>
             </div>
         {% endfor %}
