--- a/src/Busybee/TimeTableBundle/Resources/views/Periods/periodScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Periods/periodScript.html.twig
@@ -8,6 +8,15 @@
         add: '<button title="{{ 'timetable.period.add.title'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
         remove: '<button title="{{ 'timetable.period.remove.title'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true,
+        before_remove: function (collection, element) {
+            var source = $(element[0]).find('.PeriodIdentifier');
+            var period = source.attr('period');
+            var page = source.attr('page');
+            var result = removePeriod(period, page);
+            if (result === true)
+                return true;
+            return false;
+        }
     });
     {% endfor %}
 
@@ -15,30 +24,25 @@
         if (id > 0) {
             var path = '{{ path('period_remove', {'id': '__id__', 'page': '__page__'}) }}';
             path = path.replace('__id__', id);
-            var fragment = $('.tab-content > .active').attr('id');
             path = path.replace('__page__', page);
-
 
             $.ajax({
                 url: path,
                 type: 'POST',
                 success: function (data) {
-                    if (data['status'] == 'success') {
-                        //  $('#' + fragment).html(data['page']);
-                        $('.messageWindow').html(data['message']);
-                        $('.messageWindow').fadeOut(3000);
+                    if (data['status'] === 'success') {
+                        $('.messageWindow').html(data['message']).fadeOut(3000);
                         return true;
-                    } else if (data['status'] == 'error') {
-                        $('.messageWindow').html(data['message']);
-                        $('.messageWindow').fadeOut(3000);
+                    } else if (data['status'] === 'error') {
+                        $('.messageWindow').html(data['message']).fadeOut(3000);
                         return false;
-                    } else if (data['status'] == 'warning') {
-                        $('.messageWindow').html(data['message']);
-                        $('.messageWindow').fadeOut(3000);
+                    } else if (data['status'] === 'warning') {
+                        $('.messageWindow').html(data['message']).fadeOut(3000);
                         return false;
                     }
                 }
             });
         }
+        return true;
     }
 </script>
