TimeTable Management and Validation
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Columns/columnScript.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Columns/columnScript.html.twig
@@ -26,4 +26,18 @@
             return false;
         }
     });
+
+    function resetColumnTimes(id, currentSearch) {
+        var reset = confirm('{{ 'column.resettime.confirm'|trans }}');
+
+        if (reset === false) {
+
+        } else {
+            var path = '{{ path('column_resettimes', {'id': '__id__', 'currentSearch': '__currentSearch__'}) }}';
+            path = path.replace('__id__', id);
+            path = path.replace('__currentSearch__', currentSearch);
+            window.open(path, '_self');
+
+        }
+    }
 </script>
