--- a/src/Busybee/HomeBundle/Resources/views/Default/headerNotice.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/headerNotice.html.twig
@@ -2,10 +2,10 @@
 {% set headerNotices = '' %}
 {% if app.user is not null %}
     {% if app.user.year is not null %}
-        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.warning', 'class': 'btn btn-warning btn-header', 'prompt': get_SystemYear(app.user).name, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
+        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.warning', 'class': 'btn btn-warning btn-header', 'prompt': '<b>' ~ get_SystemYear(app.user).name ~ '</b>', 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
         {% set containerThemeOverwrite = ' containerWarning' %}
     {% else %}
-        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.current', 'class': 'btn btn-success btn-header', 'prompt': get_SystemYear(app.user).name, 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
+        {% set headerNotices = headerNotices ~ miscButton({'transDomain': 'BusybeeHomeBundle', 'style': 'float: left;', 'title': 'year.system.current', 'class': 'btn btn-success btn-header', 'prompt': '<b>' ~ get_SystemYear(app.user).name ~ '</b>', 'windowOpen': {'route': path('person_edit', {'id': app.user.person.id, '_fragment': 'user'})}}) %}
     {% endif %}
 {% endif %}
 
