--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -18,8 +18,7 @@
         {% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('person_manage') } } %}
     {% endblock paginationContent %}
     {% set transDomain = 'BusybeePersonBundle' %}
-
-    {% set h3Content = addButton({'windowOpen': {'route': path('person_edit', {'id': 'Add', 'currentSearch': pagination.search|replace({'%': ''}), 'limit': pagination.limit})}})|raw %}
+    {% set h3Content = addButton({'windowOpen': {'route': path('person_edit', {'id': 'Add', 'currentSearch': pagination.getSearchProperty(), 'limit': pagination.limit})}})|raw %}
 
     {% set h3Content = h3Content ~ uploadButton({'type': 'button', 'transDomain': transDomain, 'title': 'person.title.import', 'windowOpen': {'route': path('people_import')}})|raw %}
 
@@ -91,7 +90,7 @@
                     {{ person.email }}
                 </div>
                 <div class="col-md-2 col-sm-2 text-center form-inline">
-                    {{ editButton({'title': 'person.title.edit', 'transDomain': 'BusybeePersonBundle', 'windowOpen': {'route': path('person_edit', {'id': person.id, 'currentSearch': pagination.search|replace({'%': ''}), 'limit': pagination.limit })}, 'style': '', 'colour': 'warning'})|raw }}
+                    {{ editButton({'title': 'person.title.edit', 'transDomain': 'BusybeePersonBundle', 'windowOpen': {'route': path('person_edit', {'id': person.id, 'currentSearch': pagination.getSearchProperty(), 'limit': pagination.limit })}, 'style': '', 'colour': 'warning'})|raw }}
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs">
                     <div class="row">
