--- a/src/Busybee/PersonBundle/Resources/views/Person/panelHeader.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/panelHeader.html.twig
@@ -13,10 +13,12 @@
         {% else %}
             {{ returnButton({'title': 'person.return', 'transDomain': 'BusybeePersonBundle', 'windowOpen': {'route': path('person_manage', {'currentSearch': currentSearch, 'limit': limit})}})|raw }}
         {% endif %}
+        {% if currentSearch|length == 0 %}{% set currentSearch = 'null' %}{% endif %}
+        {% if limit|length == 0 %}{% set limit = 0 %}{% endif %}
         {% if id != 'Add' %}
             {{ addButton({'title': 'person.add.title', 'transDomain': 'BusybeePersonBundle', 'windowOpen': {'route': path('person_edit', {'id': 'Add', 'currentSearch': currentSearch, 'limit': limit})}})|raw }}
 		{% endif %}
-        {{ resetButton({'type': 'button', 'windowOpen': {'route': path('person_edit', {'id': app.request.get('id'), 'currentSearch': currentSearch, 'limit': limit}) }})|raw }}
+        {{ resetButton({'type': 'button', 'javascript': {'function': 'resetForm', 'options': []}, 'title': 'person.reset.button', 'transDomain': 'BusybeePersonBundle'})|raw }}
         {{ saveButton()|raw }}
 		{% if form.dob.vars.data is not empty %}
             {% set difference = date('now').diff(date(form.dob.vars.data)) %}
