--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarMenu.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarMenu.html.twig
@@ -4,6 +4,6 @@
     {% set h3Content = h3Content ~ addButton({'windowOpen': {'route': path('year_edit', {'id': 'Add'})}}) %}
     {% set h3Content = h3Content ~ miscButton({'title': 'year.calendar.button', 'type': 'button', 'class': 'halflings halflings-calendar btn btn-info', 'transDomain': 'BusybeeInstituteBundle', 'windowOpen': {'route': path('year_calendar', {'id': app.request.get('id'), 'closeWindow': true}), 'target': 'window.calendar', 'params': 'width=1200,height=900'}})|raw %}
 {% endif %}
-{% set h3Content = h3Content ~ resetButton({'type': 'button', 'windowOpen': {'route': path('year_edit', {'id': app.request.get('id')})}}) %}
+{% set h3Content = h3Content ~ resetButton({'type': 'button', 'javascript': {'function': 'resetYear', 'options': []}}) %}
 {% set h3Content = h3Content ~ saveButton() %}
 {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': header, 'transDomain': 'BusybeeInstituteBundle'} %}
