Assign Days Help
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/Days/termTab.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Days/termTab.html.twig
@@ -3,6 +3,9 @@
     {% trans_default_domain 'BusybeeTimeTableBundle' %}
 
     {% set header = termName %}
+    {% set panelParagraph = 'timetable.assign.days.help' %}
+    {% set transDomain = 'BusybeeTimeTableBundle' %}
+
 {% include '@BusybeeHome/Page/panelStart.html.twig' %}
 
     {% set schoolDays = get_setting('schoolWeek') %}
