--- a/src/Busybee/StaffBundle/Resources/views/Person/staff.html.twig
+++ b/src/Busybee/StaffBundle/Resources/views/Person/staff.html.twig
@@ -21,7 +21,8 @@
                 <div class="col-sm-6 well">
                     {{ form_row(form.staff.house) }}
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 well">
+                    {{ form_row(form.staff.homeroom) }}
                 </div>
             </div>
         </div>
