--- a/src/Busybee/TimeTableBundle/Resources/views/Columns/columnContent.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/Columns/columnContent.html.twig
@@ -6,6 +6,9 @@
     {% set h3Content = '<div class="collection-actions collection-panel">' %}
     {% set h3Content = h3Content ~ returnButton({'windowOpen': {'route': path('timetable_manage', {'currentSearch': app.request.get('currentSearch')})}})|raw %}
     {% set h3Content = h3Content ~ saveButton()|raw %}
+    {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
+    {% set h3Content = h3Content ~ miscButton({'class': 'btn btn-success halflings halflings-cog'})|raw %}
+    {% set h3Content = h3Content ~ '</div>' %}
     {% set title = 'timetable.column.add.title'|trans %}
     {% if col.vars.data is not empty %}{% set title = timetable.getFullName ~ ': ' ~ col.vars.data.name ~ ' (' ~ col.vars.data.nameShort ~ ')' %}{% endif %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' with {'name': title, 'panelStyle': 'primary' } %}
