End of Day 24th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
+++ b/src/Busybee/PaginationBundle/Resources/views/Default/index.html.twig
@@ -33,7 +33,7 @@
         <div class="col-sm-2 text-right">
             {% if form.choice is defined %}
                 <label class="control-label">{{ form.choice.vars.label|trans }}</label>
-                {{ form_widget(form.choice, {'value': form.vars.route}) }}
+                {{ form_widget(form.choice) }}
             {% endif %}
         </div>
         {% if pagination.getTotal > pagination.getLimit %}
